# data-report-segmenter

./: .gitignore  README.md  build.sh  doover_config.json  pyproject.toml
.github/workflows/: lint-and-test.yml  run-linting.yml  run-tests.yml  validate-schema.yml
simulators/: deployment_config.json
src/data_report_segmenter/: __init__.py  app_config.py  app_ui.py  application.py  report.py  segments.py
tests/: test_imports.py  test_report.py  test_segments.py
widget/: ConcatenatePlugin.ts  README.md  package-lock.json  package.json  rsbuild.config.ts
widget/src/: DataReportSegmenterWidget.tsx
widget/src/components/: AddSegmentPanel.tsx  ChangeSegmentDialog.tsx  DateRangePicker.tsx  GanttTimeline.tsx  GenerateReportPanel.tsx  HamburgerMenu.tsx  ReportList.tsx  SegmentHeader.tsx  TimelineBrush.tsx  TimelineSection.tsx  ui.tsx
widget/src/hooks/: useAddSegment.ts  useGenerateReport.ts  useReportsWatch.ts  useSegmentHistory.ts  useSwitchSegment.ts
widget/src/lib/: config.ts  format.ts  options.ts  reports.ts  rpc.ts  theme.ts  timeline.ts  types.ts
widget/tests/: config.test.mjs  format.test.mjs  options.test.mjs  reports.test.mjs  rpc.test.mjs  theme.test.mjs  timeline.test.mjs
